<resources>
    <string name="app_name">RC Diploma App</string>
    <string name="create_account">Create a new account</string>
    <string name="login_form">Login Form</string>
    <string name="email_id">Enter Email Id</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_navigation">NavigationActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="title_activity_maps">Map</string>
    <string name="price_symbol">₹</string>

    <string name="google_client_id">133254502032-79jr7osmh29jrimchlaj943kml9k3qbt.apps.googleusercontent.com</string>

    <string name="facebook_app_id">637752060550042</string>
    <string name="fb_login_protocol_scheme">fb637752060550042</string>

</resources>