<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/sky_blue"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/main_signup"
        style="@style/semibold_24"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="30dp"
        android:text="@string/create_account" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/main_signup">

        <TextView
            android:id="@+id/main_login"
            style="@style/semibold_24"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="30dp"
            android:text="@string/login_form" />

        <EditText
            android:id="@+id/main_email"
            style="@style/edittext_semibold_16"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/main_login"
            android:layout_marginHorizontal="10dp"
            android:layout_marginTop="50dp"
            android:background="@drawable/custom_border"
            android:hint="@string/email_id"
            android:inputType="textEmailAddress"
            android:padding="10dp" />

        <EditText
            android:id="@+id/main_password"
            style="@style/edittext_semibold_16"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/main_email"
            android:layout_marginHorizontal="10dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/custom_border"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:padding="10dp" />

        <Button
            android:id="@+id/main_login_button"
            style="@style/button_semibold_20"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_below="@id/main_password"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="30dp"
            android:background="@drawable/custom_button"
            android:text="@string/login"
            app:backgroundTint="@null" />

    </RelativeLayout>

</RelativeLayout>